Fixed issue where fetch progress appeared over content scrollbar

--- a/app/assets/stylesheets/controllers/main.sass
+++ b/app/assets/stylesheets/controllers/main.sass
@@ -44,7 +44,7 @@ body
             height: 2px
             background: linear-gradient(to right, #0f9df1 0%, #7b37ff 100%)
             position: absolute
-            z-index: 1
+            z-index: 101
 
             -webkit-transition: width 200ms ease-out
             -o-transition: width 200ms ease-out
@@ -60,9 +60,7 @@ body
 
         app-document-viewer
             height: 100vh
-            overflow-y: auto
             position: relative
-            z-index: -1
 
             > div.document
                 opacity: 0
