--- a/app/assets/stylesheets/partials/_navigation.sass
+++ b/app/assets/stylesheets/partials/_navigation.sass
@@ -5,6 +5,7 @@ nav
     box-shadow: 0px 0px 16px -5px rgb(0, 0, 0)
     position: absolute
     width: 100%
+    z-index: 100
 
     #primary-banner
         padding: 0.5rem 0
